confirm test working

--- a/DotNetLightning.LDK/DotNetLightning.LDK.csproj
+++ b/DotNetLightning.LDK/DotNetLightning.LDK.csproj
@@ -15,4 +15,5 @@
     <ItemGroup>
         <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.6.0-*" />
     </ItemGroup>
+    <Import Project="LDK.targets" />
 </Project>
