--- a/DotNetLightning.LDK/DotNetLightning.LDK.csproj
+++ b/DotNetLightning.LDK/DotNetLightning.LDK.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="NBitcoin" Version="5.0.27" />
         <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.6.0-*" />
     </ItemGroup>
     <Import Project="LDK.targets" />
