--- a/NRustLightning/NRustLightning.csproj
+++ b/NRustLightning/NRustLightning.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>netstandard2.1</TargetFramework>
         <LangVersion>8.0</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <RootNamespace>DotNetLightning.LDK</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
