--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: build and deploy
 on: [push]
 
 jobs:
-  build_and_test:
+  build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -17,6 +17,14 @@ jobs:
           dotnet-version: ${{ matrix.dotnet }}
       - name: Build with dotnet
         run: dotnet build --configuration Release
+  test:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-18.04, ubuntu-16.04, windows-latest, macos-latest]
+        dotnet: ['3.1.200']
+      fail-fast: true
+    steps:
       - name: Run test
         run: ./test.sh
   pack:
