--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 name: build and deploy
-on: [push]
+on: [pull_request]
 
 jobs:
   build:
@@ -15,20 +15,39 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: ${{ matrix.dotnet }}
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          override: true
+          components: rustfmt, clippy
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build --configuration Release NRustLightning
   test:
     runs-on: ${{ matrix.os }}
+    needs: build
     strategy:
       matrix:
         os: [ubuntu-18.04, ubuntu-16.04, windows-latest, macos-latest]
         dotnet: ['3.1.200']
       fail-fast: true
     steps:
-      - name: Run test
+      - uses: actions/checkout@v2
+      - name: Setup ${{ matrix.dotnet }} .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: ${{ matrix.dotnet }}
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          override: true
+          components: rustfmt, clippy
+      - name: Run test in ${{ matrix.os }}
         run: ./test.sh
   pack:
     runs-on: ubuntu-18.04
+    needs: [build, test]
     steps:
     - name: dotnet pack
       run: |
