--- a/src/NRustLightning/NRustLightning.csproj
+++ b/src/NRustLightning/NRustLightning.csproj
@@ -7,6 +7,8 @@
         <RootNamespace>DotNetLightning.LDK</RootNamespace>
     </PropertyGroup>
 
+   <Import Project="../LDK.targets" />  
+
     <ItemGroup>
         <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
             <_Parameter1>$(AssemblyName).Tests</_Parameter1> <!-- We use the value of AssemblyName to declare the value of the attribute -->
@@ -17,5 +19,4 @@
         <PackageReference Include="NBitcoin" Version="5.0.27" />
         <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.6.0-*" />
     </ItemGroup>
-    <Import Project="LDK.targets" />
 </Project>
