--- a/tests/NRustLightning.Tests/NRustLightning.Tests.csproj
+++ b/tests/NRustLightning.Tests/NRustLightning.Tests.csproj
@@ -8,6 +8,8 @@
         <RootNamespace>DotNetLightning.LDK.Tests</RootNamespace>
     </PropertyGroup>
 
+   <Import Project="../../src/LDK.targets" />
+
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
         <PackageReference Include="xunit" Version="2.4.0" />
@@ -16,7 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\NRustLightning\NRustLightning.csproj" />
+      <ProjectReference Include="..\..\src\NRustLightning\NRustLightning.csproj" />
     </ItemGroup>
 
 </Project>
