add nightly* to publishing branch

--- a/.github/workflows/publish_master.yml
+++ b/.github/workflows/publish_master.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - master
-      - ci
+      - 'nightly*' # to workaround regular publishing process
 
 jobs:
   pack_and_push:
