--- a/src/NRustLightning/NRustLightning.csproj
+++ b/src/NRustLightning/NRustLightning.csproj
@@ -4,7 +4,8 @@
         <TargetFramework>netstandard2.1</TargetFramework>
         <LangVersion>8.0</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <RootNamespace>DotNetLightning.LDK</RootNamespace>
+        <PackageId>NRustLightning</PackageId>
+        <RootNamespace>NRustLightning</RootNamespace>
     </PropertyGroup>
 
    <Import Project="../LDK.targets" />  
