--- a/.github/workflows/publish_master.yml
+++ b/.github/workflows/publish_master.yml
@@ -7,7 +7,13 @@ on:
 
 jobs:
   pack_and_push:
-    runs-on: ubuntu-18.04
+    name: "publish "
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-18.04, windows-latest, macos-latest]
+        dotnet: ['3.1.200']
+      fail-fast: true
     steps:
       - uses: actions/checkout@v2
         with:
@@ -25,6 +31,13 @@ jobs:
       - name: pack and push to nuget
         run: |
           if [ ${{ secrets.NUGET_API_KEY }} ]; then
-            dotnet pack -p:Configuration=Release src/NRustLightning --version-suffix date`date +%Y%m%d-%H%M`.git-`echo $GITHUB_SHA | cut -c 1-7`
+            if [ ${{ matrix.os }} = "macos-latest" ]; then
+              RID="osx-x64"
+            elif [ ${{ matrix.os }} = "ubuntu-18.04" ]; then 
+              RID="linux-x64"
+            else
+              RID="win"
+            fi
+            dotnet pack -p:Configuration=Release src/NRustLightning --version-suffix date`date +%Y%m%d-%H%M`.git-`echo $GITHUB_SHA | cut -c 1-7`-${RID}
             dotnet nuget push ./src/NRustLightning/bin/Release/NRustLightning.*.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
           fi
