--- a/.github/workflows/publish_master.yml
+++ b/.github/workflows/publish_master.yml
@@ -28,6 +28,13 @@ jobs:
           toolchain: nightly
           override: true
 
+      - name: Cache cargo build
+        uses: actions/cache@v1
+        with:
+          path: rust-lightning/target
+          key: ${{ matrix.os }}-cargo-build-target-${{ hashFiles('rust-lightning/Cargo.lock') }}-${{ hashFiles('rust-lightning/**/src/**') }}
+
+
       - name: pack and push to nuget
         run: |
           if [ ${{ secrets.NUGET_API_KEY }} ]; then
