--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,27 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
+
+      # workaround for upload-release-asset does not support variable expansion.
+      # see: https://github.com/actions/upload-release-asset/issues/17
+      - name: get version
+        id: get_version
+        run: |
+          echo ${GITHUB_REF/refs\/tags\/v/}
+          echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v/}
+
+      - name: Create release
+        id: create_release
+        uses: actions/create-release@v1
+        if: startsWith( matrix.os, 'ubuntu') # we only want to run once.
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v${{ steps.get_version.outputs.VERSION }}
+          release_name: Release v${{ steps.get_versoin.outputs.VERSION }}
+          draft: false
+          prerelease: true # TODO: change to false when ready
+
       - name: Setup 3.1.200 .NET Core
         uses: actions/setup-dotnet@v1
         with:
@@ -33,25 +54,6 @@ jobs:
       - name: pack
         run: |
             dotnet pack -p:Configuration=Release src/NRustLightning
-
-      # workaround for upload-release-asset does not support variable expansion.
-      # see: https://github.com/actions/upload-release-asset/issues/17
-      - name: get version
-        id: get_version
-        run: |
-          echo ${GITHUB_REF/refs\/tags\/v/}
-          echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v/}
-
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v${{ steps.get_version.outputs.VERSION }}
-          release_name: Release v${{ steps.get_versoin.outputs.VERSION }}
-          draft: false
-          prerelease: true # TODO: change to false when ready
 
       - name: upload release asset
         uses: actions/upload-release-asset@v1
