split release job

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,11 +5,42 @@ on:
       - 'v*.*.*'
 
 jobs:
+  # we want to create release only once, hence indendent from build task.
+  create_release:
+    runs-on: ubuntu-18.04
+    steps:
+      # workaround for upload-release-asset does not support variable expansion.
+      # see: https://github.com/actions/upload-release-asset/issues/17
+      - name: get version
+        id: get_version
+        run: |
+          echo ${GITHUB_REF/refs\/tags\/v/}
+          echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v/}
+
+      - name: Create release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v${{ steps.get_version.outputs.VERSION }}
+          release_name: Release v${{ steps.get_versoin.outputs.VERSION }}
+          draft: false
+          prerelease: true # TODO: change to false when ready
+      - run: |
+          echo '${{ steps.create_release.outputs.upload_url }}' > release_upload_url.txt
+      - uses: actions/upload-artifact@v1
+        with:
+          name: create-release
+          path: release_upload_url.txt
+
   pack_and_push:
+    needs: create_release
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-18.04, windows-latest, macos-latest]
+    
     steps:
       - uses: actions/checkout@v2
         with:
@@ -22,18 +53,6 @@ jobs:
         run: |
           echo ${GITHUB_REF/refs\/tags\/v/}
           echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v/}
-
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
-        if: startsWith( matrix.os, 'ubuntu') # we only want to run once.
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v${{ steps.get_version.outputs.VERSION }}
-          release_name: Release v${{ steps.get_versoin.outputs.VERSION }}
-          draft: false
-          prerelease: true # TODO: change to false when ready
 
       - name: Setup 3.1.200 .NET Core
         uses: actions/setup-dotnet@v1
@@ -54,13 +73,20 @@ jobs:
       - name: pack
         run: |
             dotnet pack -p:Configuration=Release src/NRustLightning
+          
+      - uses: actions/download-artifact@v1
+        with:
+          name: create-release
+      - id: upload-url
+        run: |
+          echo "::set-output name=url::$(cat create-release/release_upload_url.txt)"
 
       - name: upload release asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ steps.upload-url.outputs.url }}
           asset_path: ./src/NRustLightning/bin/Release/NRustLightning.${{ steps.get_version.outputs.VERSION }}.nupkg
           asset_name: NRustLightning-${{ matrix.os }}.${{ steps.get_version.outputs.VERSION }}.nupkg
           asset_content_type: application/zip
