--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,8 @@ jobs:
       - name: get version
         id: get_version
         run: |
-          echo ${GITHUB_REF##/refs\/tags\/v}
-          echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v}
+          echo ${GITHUB_REF/refs\/tags\/v/}
+          echo "::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v/}"
 
       - name: Create release
         id: create_release
@@ -51,8 +51,8 @@ jobs:
       - name: get version
         id: get_version
         run: |
-          echo ${GITHUB_REF##/refs\/tags\/v}
-          echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v}
+          echo ${GITHUB_REF/refs\/tags\/v/}
+          echo "::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v/}"
 
       - name: Setup 3.1.200 .NET Core
         uses: actions/setup-dotnet@v1
