--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,8 +15,8 @@ jobs:
         id: get_version
         run: |
           echo ${GITHUB_REF/refs\/tags\/v/}
+          echo ${GITHUB_REF/refs\/tags\/v/} > version.txt
           echo "::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v/}"
-
       - name: Create release
         id: create_release
         uses: actions/create-release@v1
@@ -24,15 +24,20 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: v${{ steps.get_version.outputs.VERSION }}
-          release_name: Release v${{ steps.get_versoin.outputs.VERSION }}
+          release_name: Release v${{ steps.get_version.outputs.VERSION }}
           draft: false
           prerelease: true # TODO: change to false when ready
+
       - run: |
           echo '${{ steps.create_release.outputs.upload_url }}' > release_upload_url.txt
       - uses: actions/upload-artifact@v1
         with:
           name: create-release
           path: release_upload_url.txt
+      - uses: actions/upload-artifact@v1
+        with:
+          name: get_version
+          path: version.txt
 
   pack_and_push:
     needs: create_release
@@ -45,14 +50,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
-
-      # workaround for upload-release-asset does not support variable expansion.
-      # see: https://github.com/actions/upload-release-asset/issues/17
-      - name: get version
-        id: get_version
-        run: |
-          echo ${GITHUB_REF/refs\/tags\/v/}
-          echo "::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v/}"
 
       - name: Setup 3.1.200 .NET Core
         uses: actions/setup-dotnet@v1
@@ -74,12 +71,19 @@ jobs:
         run: |
             dotnet pack -p:Configuration=Release src/NRustLightning
           
+      # get and set release url and version
       - uses: actions/download-artifact@v1
         with:
           name: create-release
+      - uses: actions/download-artifact@v1
+        with:
+          name: get_version
       - id: upload-url
         run: |
           echo "::set-output name=url::$(cat create-release/release_upload_url.txt)"
+      - id: get_version
+        run: |
+          echo "::set-output name=VERSION::$(cat get_version/version.txt)"
 
       - name: upload release asset
         uses: actions/upload-release-asset@v1
