--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,23 +1,34 @@
 name: publish(stable release)
 on:
   push:
-    tags:
-      - 'v*.*.*'
+    branches:
+      - stable
+      - ci
 
 jobs:
   # we want to create release only once, hence indendent from build task.
   create_release:
     runs-on: ubuntu-18.04
     steps:
+      - uses: actions/checkout@v2
+        with:
+         fetch-depth: '0'
+      - name: Bump version and push tag
+        id: bump_tag
+        uses: anothrNick/github-tag-action@1.17.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
+          WITH_V: true
       # workaround for upload-release-asset does not support variable expansion.
       # see: https://github.com/actions/upload-release-asset/issues/17
       - name: get version
         id: get_version
         # the substitution we use here does not work in windows.
         run: |
-          echo ${GITHUB_REF/refs\/tags\/v/}
-          echo ${GITHUB_REF/refs\/tags\/v/} > version.txt
-          echo "::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v/}"
+          echo ${{ steps.bump_tag.outputs.new_tag }}
+          echo ${{ steps.bump_tag.outputs.new_tag }} > version.txt
+          echo "::set-output name=VERSION::${{ steps.bump_tag.outputs.new_tag }}"
       - name: Create release
         id: create_release
         uses: actions/create-release@v1
