add polyfill for DotNetLightning.Data

--- a/src/NRustLightning/NRustLightning.csproj
+++ b/src/NRustLightning/NRustLightning.csproj
@@ -21,4 +21,8 @@
         <PackageReference Include="NBitcoin" Version="5.0.27" />
         <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.6.0-*" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\DotNetLightning.Data\DotNetLightning.Data.fsproj" />
+    </ItemGroup>
 </Project>
