--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,4 +48,4 @@ jobs:
 
       - name: Run test in ${{ matrix.os }}
         if: startsWith(matrix.dotnet, '3.1')
-        run: dotnet test tests/NRustLightning.Tests -- RunConfiguration.TestSessionTimeout=30000
+        run: dotnet test --filter "FullyQualifiedName~ShouldHandleSimpleStruct" tests/NRustLightning.Tests -- RunConfiguration.TestSessionTimeout=30000
