add docker-compose for testing

--- a/src/NRustLightning.Server/NRustLightning.Server.csproj
+++ b/src/NRustLightning.Server/NRustLightning.Server.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="System.IO.Pipelines" Version="4.7.1" />
   </ItemGroup>
 
+  <Import Project="../LDK.targets" />   
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
