finish writing dockerfile for server

--- a/src/NRustLightning.Server/Dockerfile
+++ b/src/NRustLightning.Server/Dockerfile
@@ -3,7 +3,8 @@ WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM ubuntu:18.04 as cargo-build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-bionic AS build
+USER root
 WORKDIR /src/
 RUN apt-get update \
   && apt-get install -y \
@@ -17,29 +18,28 @@ RUN curl https://sh.rustup.rs -sSf > /tmp/rustup-init.sh \
     && chmod +x /tmp/rustup-init.sh \
     && sh /tmp/rustup-init.sh -y \
     && rm -rf /tmp/rustup-init.sh
-ENV PATH "$PATH:~/.cargo/bin"
+ENV PATH "$PATH:/root/.cargo/bin"
+RUN which cargo
 # Install nightly rust.
-RUN ~/.cargo/bin/rustup install nightly
-RUN ~/.cargo/bin/rustup default nightly
+RUN rustup install nightly
+RUN rustup default nightly
+
 
 # --- workaround to restore only deps for caching. -- 
-RUN USER=root ~/.cargo/bin/cargo new --lib lightning
-RUN USER=root ~/.cargo/bin/cargo new --lib bindings
-RUN USER=root ~/.cargo/bin/cargo new --bin lightning-net-tokio
+RUN USER=root cargo new --lib lightning
+RUN USER=root cargo new --lib bindings
+RUN USER=root cargo new --bin lightning-net-tokio
 COPY rust-lightning/Cargo* ./
 COPY rust-lightning/bindings/Cargo.toml ./bindings/
 COPY rust-lightning/lightning/Cargo.toml ./lightning/
-RUN ~/.cargo/bin/cargo build --release && rm -rf bindings lightning lightning-net-tokio
+RUN cargo build --release && rm -rf bindings lightning lightning-net-tokio
 # -- --
 
 COPY rust-lightning/lightning ./lightning/
 COPY rust-lightning/bindings ./bindings/
-COPY rust-lightning/lightning-net-tokio ./lightning-net-tokio/
-RUN cd bindings && ~/.cargo/bin/cargo build --release
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1-bionic AS build
 WORKDIR /src
-COPY --from=cargo-build /src/target /src/rust-lightning/target
+
 COPY ["src/NRustLightning.Server/NRustLightning.Server.csproj", "src/NRustLightning.Server/"]
 RUN dotnet restore "src/NRustLightning.Server/NRustLightning.Server.csproj"
 COPY . .
