assure lnd and lightningd is connecting fine

--- a/docker-compose.regtest.yml
+++ b/docker-compose.regtest.yml
@@ -30,6 +30,10 @@ services:
       - "39388" # P2P
       - "28332" # ZMQ
       - "28333" # ZMQ
+    networks:
+      main:
+        aliases:
+          - bitcoind
     volumes:
       - "./data/.bitcoin:/data"
   lnd:
@@ -47,7 +51,7 @@ services:
       - --bitcoin.regtest
       - --bitcoin.node=bitcoind
       - --bitcoind.rpchost=bitcoind:43782
-      - --bitcoind.rpcuser=johndoe
+      - --bitcoind.rpcuser=${BITCOIND_RPC_USER}
       - --bitcoind.rpcpass=${BITCOIND_RPC_PASS}
       - --bitcoind.zmqpubrawblock=tcp://bitcoind:28332
       - --bitcoind.zmqpubrawtx=tcp://bitcoind:28333
@@ -74,14 +78,67 @@ services:
       - "./data/.bitcoin:/deps/.bitcoin"
     links:
       - bitcoind
+    networks:
+      main:
+        aliases:
+          - lnd
+  lightningd:
+    image: blockstream/lightningd:prom
+    command:
+      - lightningd
+      - --bitcoin-rpcconnect=bitcoind
+      - --bitcoin-rpcuser=${BITCOIND_RPC_USER}
+      - --bitcoin-rpcpassword=${BITCOIND_RPC_PASS}
+      - --bitcoin-rpcport=43782
+      # - --network=bitcoin
+      - --network=regtest
+      - --plugin-dir=/usr/local/bin/plugins
+      - --alias=jem2323-lighningd1
+      - --log-level=debug
+      - --lightning-dir=/root/.lightning
+    environment:
+      EXPOSE_TCP: "true"
+    expose:
+      - "9735" # server port
+      - "9835" # api port
+      - "9900" # prometheus plugin
+    ports:
+      - "0.0.0.0:9999:9735"
+      - "0.0.0.0:9835:9835"
+      - "0.0.0.0:9900:9900"
+    networks:
+      main:
+        aliases:
+          - lightningd
+    volumes:
+      - "./data/.lightningd:/root/.lightning"                                                                                 
+
   nrustlightning:
-    restart: never
+    restart: "unless-stopped"
     image: joemphilips/nrustlightning
     build:
       context: .
       dockerfile: src/NRustLightning.Server/Dockerfile
     ports:
-      - 9735
+      - "9735:9735"
+      - "5001:5001"
+    expose:
+      - "9735"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      #- ASPNETCORE_URLS="https://+;http://+"
+      - ASPNETCORE_HTTPS_PORT=5001
     links:
       - bitcoind
       - lnd
+    volumes:
+      - "${HOME}/.aspnet/:/root/.aspnet/"
+      - "${HOME}/.microsoft/usersecrets/:/root/.microsoft/usersecrets"
+      - "./data/nrustlightning/:/root/.nrustlightning"
+    networks:
+      main:
+        aliases:
+          - nrustlightning
+ 
+networks:
+  main:
