--- a/src/NRustLightning.Server/appsettings.Development.json
+++ b/src/NRustLightning.Server/appsettings.Development.json
@@ -1,9 +1,18 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "P2PAllowIp": "*",
+  "P2Port": 9735,
+  "HTTPPort": 8080,
+  "https": {
+    "port": 5001,
+    "CertName": "aspnetapp.pfx",
+    "CertPass": "ssa0022nb"
+  },
+  "AllowedHosts": "*"
 }
