--- a/src/NRustLightning.Server/appsettings.json
+++ b/src/NRustLightning.Server/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "P2PAllowIp": "*",
+  "P2Port": 9735,
+  "HTTPPort": 8080,
+  "https": {
+    "port": 5001,
+    "CertName": "aspnetapp.pfx",
+    "CertPass": "ssa0022nb"
+  },
   "AllowedHosts": "*"
 }
