confirm lnd can send msg to P2pConnectionHandler

--- a/src/NRustLightning.Server/appsettings.json
+++ b/src/NRustLightning.Server/appsettings.json
@@ -8,6 +8,7 @@
   },
   "P2PAllowIp": "*",
   "P2Port": 9735,
+  "ExternalIp": "nrustlightning:9735",
   "HTTPPort": 8080,
   "https": {
     "port": 5001,
