--- a/docker-compose.regtest.yml
+++ b/docker-compose.regtest.yml
@@ -126,6 +126,7 @@ services:
       - "9735"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - RUST_BACKTRACE=1
       #- ASPNETCORE_URLS="https://+;http://+"
       - ASPNETCORE_HTTPS_PORT=5001
     links:
